feat: update codebase for observability
